gl31-master/src/test/deca/lex/valid/sansobjet/while_simple.deca
// Description:
//    tests de programme correct lexicalement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021

{
    a = 2;
    b = 4;
    while(a < b){
        a = a + 1;
    }
}
